<resources>
    <string name="app_name">Recycling Academy</string>
    <string name="intro_name">Recycling Academy</string>
    <string name="aboutUs">About Us</string>
    <string name="importance">Importance of Recycling</string>
    <string name="home">Home</string>
    <string name="camera">Camera</string>
    <string name="settings">Settings</string>
    <string name="recycle">Recycle Categories</string>
    <string name="references">References</string>
    <string name="plastic">Plastic</string>
    <string name="paper">Paper</string>
    <string name="glass">Glass</string>
    <string name="metal">Metal</string>
    <string name="map">Map</string>
    <string name="logoImageDescription">The logo of the Massachusetts Academy of Math and Science
    </string>
    <string name="aboutRecyclingRaccoonsHeader">Who are the Recycling Raccoons?</string>
    <string name="aboutRecyclingRaccoonsDescription">We are a team of students from the
        Massachusetts Academy of Math and Science in Worcester, Massachusetts who strive to help our
        community through the creation of this app. As concerns for the environment grow, proper
        recycling becomes increasingly important. In our research, we found that people that do not
        recycle do so due to a lack of access or because they find recycling tedious or confusing.
        Hearing this, we decided that it would be helpful to simplify the most confusing part of
        the process—determining recyclability or reusing recyclable items. With the guide of this
        app, everyone becomes capable of helping to save the environment.</string>
    <string name="aboutMAMSHeader">What is Mass Academy?</string>
    <string name="aboutMAMSDescription">The Massachusetts Academy of Math and Science (MAMS) is a
        public school in Worcester, Massachusetts that offers STEM-focused (Science, Technology,
        Engineering, Math) courses at an advanced level for 11th and 12th graders. The school puts
        an emphasis on project-based learning and collaboration. Students also pursue long-term
        projects such as a 5-month independent research project, a 3-month assistive device group
        project, and a 2-month Apps for Good group project. This app is the work of one Apps for
        Good project that provides the community with assistance during the recycling process.
    </string>
    <string name="aboutAFGHeader">What is Apps for Good?</string>
    <string name="aboutAFGDescription">Apps for Good is an organization that brings education and
        access to students interested in coding all over the world. The learning experience is
        student-driven as small groups of students work together to learn and create their own app
        which makes a difference in their community. This app is the product of the Recycling
        Raccoon’s Apps for Good project.</string>
    <string name="exit">Exit</string>
    <string name="recyclingCategoryIntroduction">Please Select a Recycling Category</string>
    <string name="plasticCategory">Plastic</string>
    <string name="plasticCategoryCD">Plastic Bottle</string>
    <string name="paperCategory">Paper</string>
    <string name="paperCategoryCD">Cardboard Box</string>
    <string name="glassCategory">Glass</string>
    <string name="glassCategoryCD">Glass Cup</string>
    <string name="metalCategory">Metal</string>
    <string name="metalCategoryCD">Metal Bars</string>
    <string name="recyclingImportance">Recycling Importance</string>
    <string name="importanceInstructions">Click on the circles on each picture to learn more about why recycling is important</string>
    <string name="environmentTitle">Environmental Impact</string>
    <string name="cartoonReference">This cartoon is from http://www.seppo.net/cartoons/displayimage.php?pid=1367</string>
    <string name="economicTitle">Economic Impact</string>
    <string name="recycleProperly">Why is it important to recycle properly?</string>
    <string name="sad_recycling_description">This is a picture of a sad recycling bin</string>
    <string name="recycleProperly_info">To ensure that the recycling process runs successfully,
        it is important to understand how it works and what can be recycled.
        One product that is recycled improperly can contaminate an entire bale of material (How to Recycle and Why You Should Do It, 2019).
        This contamination increase costs to ship the material to a landfill and damage equipment used in recycling (US EPA, 2017). </string>
    <string name="processTitle">Recycling Process</string>
    <string name="environmentDescription">Picture that shows environmental impact of recycling</string>
    <string name="landfill_info">Recycling reduces the amount of waste in landfills,
        a big contributor of methane in the atmosphere.</string>
    <string name="incinerator_info">Recycling reduces the use of incineration.
        The incineration of landfill waste releases many greenhouse gases into the atmosphere,
        a big contributor to global warming.</string>
    <string name="resources_info">Recycling conserves natural resources which are in limited supply.</string>
    <string name="energy_info">Recycling conserves energy.
        It takes less energy to recycle materials than to produce products out of raw material
        since recyclable materials have already been processed.</string>
    <string name="economicDescription">Picture that shows the economic impact of recycling</string>
    <string name="circular_econ_info">Recycling allows for materials to be efficiently used to their full potential.
        The recycling cycle contributes to a sustainable circular economy.</string>
    <string name="jobs_info">The recycling industry provides many jobs.
        In 2020, recycling provided 681,000 jobs and $37.8 billion in wages.</string>
    <string name="processDescription">Picture that shows the recycling process</string>
    <string name="collection_info">Firstly, the materials are collected by the town or a recycling facility</string>
    <string name="cleaning_info">Secondly, the materials are sorted, cleaned, and processed into usable manufacturing material.</string>
    <string name="manufacturing_info">Thirdly, the processed materials are sold to manufacturing companies just like any raw material.</string>
    <string name="new_product_info">Fourthly, the materials are manufactured into new products and the cycle continues.</string>
    <string name="referencesTitle">References</string>
    <string name="refsInAPA"></string>
    <string name="camPerm">Camera Permissions</string>
    <string name="locPerm">Location Permissions</string>
    <string name="stoPerm">Storage Permissions</string>
    <string name="darkMode">Dark Mode</string>
    <string name="identificationHeader">How to identify: </string>
    <string name="glassIdentificationInfo1">• it is transparent or translucent</string>
    <string name="glassIdentificationInfo2">• it is hard and brittle</string>
    <string name="jar">• A jar without the lid</string>
    <string name="beverageBottles">• Glass beverage bottles</string>
    <string name="wineBottles">• Wine bottles but not wine glasses</string>
    <string name="perfumeBottles">• Perfume bottles</string>
    <string name="beerBottles">• Beer bottles</string>
    <string name="oliveOilBottle">• Olive oil bottle</string>
    <string name="condimentBottles">• Condiment bottles and jars</string>
    <string name="cleanItem">• Clean the item of any solids or liquids</string>
    <string name="brokenGlass">• Do not recycle broken glass</string>
    <string name="checkContamination">• Check that your glass is not treated with chemicals or
        covered in any type of coating. This kind of glass is not recyclable.</string>
    <string name="checkAreaAvailability">• Check to see if glass is recyclable at your local recycling center </string>
    <string name="separateGlass">• Some areas may require you to separate glass from other recyclable material</string>
    <string name="throwInRecyclingBin">• Put it in the recycling bin</string>
    <string name="diy">• Create a DIY project</string>
    <string name="makeAnInstrument">• Turn it into an instrument</string>
    <string name="aluminumCansDes">Aluminum cans</string>
    <string name="curbsideRecyclables">Examples of curbside recyclables:</string>
    <string name="mExample1">• Tin or aluminum cans</string>
    <string name="mExample2">• Disposable baking items</string>
    <string name="mExample3">• Aluminum foil</string>
    <string name="mExample4">• Paint cans</string>
    <string name="notCurbside">Examples of NON curbside recyclables (must not infused with plastic): </string>
    <string name="mExample5">• Pots and pans</string>
    <string name="mExample6">• Metal utensils and other kitchen tools</string>
    <string name="mExample7">• Metal tools</string>
    <string name="mExample8">• Car parts or bicycle frames</string>
    <string name="mExample9">• Metal shelves and other metal furniture</string>
    <string name="mExample10">• Wire hangars</string>
    <string name="mIdentify1">• Metal is a hard, typically shiny material</string>
    <string name="mIdentify2">• It may be malleable and fusible </string>
    <string name="m_step1">• Clean the metal of any food or liquid residue</string>
    <string name="m_step2">• Metals under three inches like nails, screws, soda tabs, cannot be
        recycled and should be thrown away</string>
    <string name="m_step3">• If a substance is metallic but is infused with plastic (candy
        wrappers, cookie wrappers, metal juice pouches, etc.), it is not recyclable and must be
        thrown away. </string>
    <string name="m_step4">• Curbside recyclables can simply be thrown into a curbside recycling
        bin or brought to a recycling center. </string>
    <string name="PET">PET</string>
    <string name="imgDisplayerDes">This area displays the image the user selected</string>
    <string name="acceptButton">Accept</string>
    <string name="cancelButton">Cancel</string>
    <string name="questionHeader">Questions</string>
    <string name="foodQuestion">There are traces of food on the object</string>
    <string name="numberQuestion">Number on the object (if applicable)</string>
    <string name="noneOption">None available</string>
    <string name="oneOption">1</string>
    <string name="twoOption">2</string>
    <string name="threeOption">3</string>
    <string name="fourOption">4</string>
    <string name="fiveOption">5</string>
    <string name="sixOption">6</string>
    <string name="sevenOption">7</string>
    <string name="numberExampleDes">This picture shows what to look for to find the recycling number</string>
    <string name="examples">Examples:</string>
    <string name="identify">How to Identify:</string>
    <string name="recycleHowTo">How to Recycle:</string>
    <string name="reuseIdeas">Ideas to Reuse:</string>
    <string name="catHeader1">Polyethylene Terephthalate</string>
    <string name="bottles">• Soda/Water Bottles</string>
    <string name="beanBags">• Bean Bags</string>
    <string name="jars">• Plastic Jars</string>
    <string name="clothes">• Clothes</string>
    <string name="tough">• Tough Material</string>
    <string name="bent">• Discolors when bent</string>
    <string name="stepPET1">• Most, if not all, town/city recycling facilities accept this type of plastics in their trucks</string>
    <string name="stepPET2">• Caps are generally removed prior to recycling</string>
    <string name="drink">• BPA free bottles can be reused to drink water</string>
    <string name="mentos">• Bottles can be used for science experiments, such as the mentos and coke experiment</string>
    <string name="homemade">• Homemade sauces and food items can be stored in used (and washed) plastic containers</string>
</resources>