<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center">

    <TextView
        android:id="@+id/questionsHeader"
        android:layout_width="582dp"
        android:layout_height="98dp"
        android:text="@string/questionHeader"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="@dimen/h1Size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <CheckBox
        android:id="@+id/foodCheck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/foodQuestion"
        app:layout_constraintTop_toBottomOf="@+id/questionsHeader" />

    <TextView
        android:id="@+id/numberQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="56dp"
        android:text="@string/numberQuestion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodCheck" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="458dp"
        android:layout_height="384dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberQuestion">

        <RadioButton
            android:id="@+id/noneOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/noneOption" />

        <RadioButton
            android:id="@+id/oneOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/oneOption" />

        <RadioButton
            android:id="@+id/twoOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/twoOption" />

        <RadioButton
            android:id="@+id/threeOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/threeOption" />

        <RadioButton
            android:id="@+id/fourOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fourOption" />

        <RadioButton
            android:id="@+id/fiveOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fiveOption" />

        <RadioButton
            android:id="@+id/sixOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sixOption" />

        <RadioButton
            android:id="@+id/sevenOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sevenOption" />

    </RadioGroup>

    <ImageView
        android:id="@+id/recyclingNumberExample"
        android:layout_width="176dp"
        android:layout_height="121dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="84dp"
        android:contentDescription="@string/numberExampleDes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodCheck"
        app:srcCompat="@drawable/recycling_number_diagram" />

    <Button
        android:id="@+id/acceptButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="152dp"
        android:text="@string/acceptButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="112dp"
        android:onClick="cameraPage"
        android:text="@string/cancelButton"
        app:layout_constraintEnd_toStartOf="@+id/acceptButton"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <LinearLayout
        android:id="@+id/navBarConstraint"
        android:layout_width="613dp"
        android:layout_height="115dp"
        android:background="@color/white"
        android:gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/houseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/home"
            android:onClick="toHomePage"
            app:srcCompat="@drawable/house_small" />

        <ImageButton
            android:id="@+id/cameraButton"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_weight="1"
            android:contentDescription="@string/camera"
            android:onClick="cameraPage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/infoButton"
            app:srcCompat="@drawable/camera_small" />

        <ImageButton
            android:id="@+id/recycleButton"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_weight="1"
            android:contentDescription="@string/recycle"
            android:onClick="recyclingMainPage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cameraButton"
            app:srcCompat="@drawable/recycling_small" />

        <ImageButton
            android:id="@+id/settingsButton"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_weight="1"
            android:contentDescription="@string/settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/recycleButton"
            app:srcCompat="@drawable/settings_small" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>