<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgDisplayer"
        android:layout_width="542dp"
        android:layout_height="570dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/imgDisplayerDes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/acceptButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="120dp"
        android:text="@string/acceptButton"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/cancelButton"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgDisplayer" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="112dp"
        android:onClick="cameraPage"
        android:text="@string/cancelButton"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgDisplayer" />

    <LinearLayout
        android:id="@+id/navBarConstraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/houseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/home"
            android:onClick="toHomePage"
            app:srcCompat="@drawable/house_small" />

        <ImageButton
            android:id="@+id/cameraButton"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_weight="1"
            android:contentDescription="@string/camera"
            android:onClick="cameraPage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/infoButton"
            app:srcCompat="@drawable/camera_small" />

        <ImageButton
            android:id="@+id/recycleButton"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_weight="1"
            android:contentDescription="@string/recycle"
            android:onClick="recyclingMainPage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cameraButton"
            app:srcCompat="@drawable/recycling_small" />

        <ImageButton
            android:id="@+id/settingsButton"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_weight="1"
            android:contentDescription="@string/settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/recycleButton"
            app:srcCompat="@drawable/settings_small" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>